- assembler gives 1st sign of life - can load from memory

--- a/Assembler/CMakeLists.txt
+++ b/Assembler/CMakeLists.txt
@@ -4,7 +4,7 @@
 cmake_minimum_required (VERSION 3.12)
 
 # Add source to this project's executable.
-add_executable (Assembler "Assembler.cpp" "Assembler.h")
+add_executable (Assembler "Assembler.cpp" "Assembler.h" "parser.cpp" "Jmp.h" "Instruction.h" "SourcePosition.h" "MemoryAccess.h" "Halt.h" "AddRegRegConst.h" "AddRegRegReg.h" "MoveRegConst.h" "MoveRegReg.h" "RestorePC.h" "StoreRegister.h" "MoveRegSymbol.h" "Linker.cpp" "Linker.h" "ObjectWriter.h" "ObjectWriter.cpp")
 
 target_link_libraries(Assembler LINK_PUBLIC CoreLib) 
 
