--- a/Simulator/CMakeLists.txt
+++ b/Simulator/CMakeLists.txt
@@ -4,11 +4,11 @@
 cmake_minimum_required (VERSION 3.12)
 
 # Add source to this project's executable.
-add_executable (ECC_CPU "ECC_CPU.cpp" "ECC_CPU.h")
+add_executable (Simulator "Simulator.cpp" "Simulator.h")
 
-target_link_libraries(ECC_CPU LINK_PUBLIC CoreLib)
+target_link_libraries(Simulator LINK_PUBLIC CoreLib)
 
 
-set_property(TARGET ECC_CPU PROPERTY CXX_STANDARD 20)
+set_property(TARGET Simulator PROPERTY CXX_STANDARD 20)
 
 # TODO: Add tests and install targets if needed.
