--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,10 @@
 #
 cmake_minimum_required (VERSION 3.12)
 
-project ("ECC_CPU")
+project ("ECC_CPU" 
+LANGUAGES C CXX)
+
+enable_testing()
 
 # Include sub-projects.
 add_subdirectory ("CoreLib")
