--- a/Simulator/CMakeLists.txt
+++ b/Simulator/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable (Simulator "Simulator.cpp" "Simulator.h")
 target_link_libraries(Simulator LINK_PUBLIC CoreLib)
 
 
-set_property(TARGET Simulator PROPERTY CXX_STANDARD 20)
+target_compile_features(Simulator PRIVATE cxx_std_20)
+#set_property(TARGET Simulator PROPERTY CXX_STANDARD 20)
 
 # TODO: Add tests and install targets if needed.
