--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Update
-      run: sudo apt update && apt install gcc-10 g++-10
+      run: sudo apt update && sudo apt install gcc-10 g++-10
       shell: bash
 
     - name: Configure CMake
