every class in own file now.

--- a/CoreLib/CMakeLists.txt
+++ b/CoreLib/CMakeLists.txt
@@ -4,7 +4,7 @@
 cmake_minimum_required (VERSION 3.15)
 
 # Add source to this project's executable.
-add_library (CoreLib "CoreLib.cpp" "CoreLib.h" "SimComponent.h" "SimComponent.cpp" "task.h" "ExampleSimComponent.h" "MachineInfo.h" "FetchStage.cpp" "FetchStage.h" "MemoryBus.h" "FetchDecodeBus.h" "Cache.h" "DRAM.h" "DRAM.cpp" "MachineInfo.cpp" "DecodeStage.h" "DecodeStage.cpp" "ExecuteStage.h" "StoreStage.h" "ExecuteStage.cpp" "StoreStage.cpp" "RegisterFile.h" "DecodeToExecuteBus.h" "ExecuteToStoreBus.h" "StoreToFetchBus.h")
+add_library (CoreLib "CoreLib.cpp" "CoreLib.h" "SimComponent.h" "SimComponent.cpp" "task.h" "ExampleSimComponent.h" "MachineInfo.h" "FetchStage.cpp" "FetchStage.h" "MemoryBus.h" "FetchDecodeBus.h" "Cache.h" "DRAM.h" "DRAM.cpp" "MachineInfo.cpp" "DecodeStage.h" "DecodeStage.cpp" "ExecuteStage.h" "StoreStage.h" "ExecuteStage.cpp" "StoreStage.cpp" "RegisterFile.h" "DecodeToExecuteBus.h" "ExecuteToStoreBus.h" "StoreToFetchBus.h" "Multiplexer.h" "Core.h" "CoreCluster.h" "CoreClusterGrid.h" "SimComponentRegistry.h")
 
 target_compile_features(CoreLib PUBLIC cxx_std_20)
 
