use include dir to clean the tree a bit.

--- a/Assembler/CMakeLists.txt
+++ b/Assembler/CMakeLists.txt
@@ -4,10 +4,11 @@
 cmake_minimum_required (VERSION 3.15)
 
 # Add source to this project's executable.
-add_executable (Assembler "Assembler.cpp" "Assembler.h" "parser.cpp" "Jmp.h" "Instruction.h" "SourcePosition.h" "MemoryAccess.h" "Halt.h" "AddRegRegConst.h" "AddRegRegReg.h" "MoveRegConst.h" "MoveRegReg.h" "RestorePC.h" "StoreRegister.h" "MoveRegSymbol.h" "Linker.cpp" "Linker.h" "ObjectWriter.h" "ObjectWriter.cpp" "LoadRegister.h")
+add_executable (Assembler "Assembler.cpp" "include/Assembler.h" "parser.cpp" "include/Jmp.h" "include/Instruction.h" "include/SourcePosition.h" "include/MemoryAccess.h" "include/Halt.h" "include/AddRegRegConst.h" "include/AddRegRegReg.h" "include/MoveRegConst.h" "include/MoveRegReg.h" "include/RestorePC.h" "include/StoreRegister.h" "include/MoveRegSymbol.h" "Linker.cpp" "include/Linker.h" "include/ObjectWriter.h" "ObjectWriter.cpp" "include/LoadRegister.h")
 
 target_link_libraries(Assembler LINK_PUBLIC CoreLib) 
 
+target_include_directories (Assembler PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 target_compile_features(Assembler PRIVATE cxx_std_20)
 #set_property(TARGET Assembler PROPERTY CXX_STANDARD 20)
