--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -8,7 +8,8 @@
       "installRoot": "${projectDir}\\out\\install\\${name}",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
-      "inheritEnvironments": [ "msvc_x64_x64" ]
+      "inheritEnvironments": [ "msvc_x64_x64" ],
+      "addressSanitizerEnabled": true
     }
   ]
 }
