good bit of progress towards parsing the C++ of the FetchState and generating SystemVerilog from it

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
                 "1"
             ],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}",
+            "cwd": "${workspaceFolder}/Simulator",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
@@ -44,7 +44,7 @@
                 "${workspaceFolder}/Assembler/tests/t1.bin"
             ],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}",
+            "cwd": "${workspaceFolder}/Assembler",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
