--- a/VerilogGenerator/test/Makefile
+++ b/VerilogGenerator/test/Makefile
@@ -1,4 +1,4 @@
 
 all:
-	verilator -Wall --cc --exe --build sim_main.cpp FetchStage.v
+	verilator -Wall --cc --exe --build sim_main.cpp main.sv
 	obj_dir/VFetchStage
