move global defs to Define.h, make insn_data a struct containing array[2]

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: parser",
             "type": "python",
             "request": "launch",
-            "program": "parser.py",
+            "program": "Main.py",
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}/VerilogGenerator"
         },
