better .vscode setup started.

--- a/CoreLib/CMakeLists.txt
+++ b/CoreLib/CMakeLists.txt
@@ -10,7 +10,7 @@ add_library (CoreLib  "include/CoreLib.h"
         "include/Task.h" "include/ExampleSimComponent.h" 
         "include/MachineInfo.h" "FetchStage.cpp" 
         "include/FetchStage.h" "include/VecMemoryBus.h" 
-        "include/FetchDecodeBus.h" "include/L3Cache.h" 
+        "include/FetchToDecodeBus.h" "include/L3Cache.h" 
         "include/RAM.h" "RAM.cpp" "MachineInfo.cpp" 
         "include/DecodeStage.h" "DecodeStage.cpp" 
         "include/ExecuteStage.h" "include/StoreStage.h" 
