tell verilator that main is the top module

--- a/VerilogGenerator/test/Makefile
+++ b/VerilogGenerator/test/Makefile
@@ -1,4 +1,4 @@
 
 all:
-	verilator -Wall --cc --exe --build sim_main.cpp main.sv
+	verilator -Wall --cc --exe --build sim_main.cpp main.sv -top-module main
 	obj_dir/VFetchStage
