init methods now need different assigns used in verilog.

--- a/VerilogGenerator/test/Makefile
+++ b/VerilogGenerator/test/Makefile
@@ -1,4 +1,9 @@
 
-all:
-	verilator -Wall --cc --exe --build sim_main.cpp main.sv -top-module main
+
+all: run
+
+compile:
+	verilator -Wall --cc --exe --build sim_main.cpp main.sv -top-module main -Wno-unused 
+	
+run: compile
 	obj_dir/Vmain
