simplify code: get rid of config class in favor of constexprs to allow easier verilog generation

--- a/CoreLib/CMakeLists.txt
+++ b/CoreLib/CMakeLists.txt
@@ -11,7 +11,7 @@ add_library (CoreLib  "include/CoreLib.h"
         "include/MachineInfo.h" "FetchStage.cpp" 
         "include/FetchStage.h" "include/VecMemoryBus.h" 
         "include/FetchToDecodeBus.h" "include/L3Cache.h" 
-        "include/RAM.h" "RAM.cpp" "MachineInfo.cpp" 
+        "include/DRAM.h" "DRAM.cpp" "MachineInfo.cpp" 
         "include/DecodeStage.h" "DecodeStage.cpp" 
         "include/ExecuteStage.h" "include/StoreStage.h" 
         "ExecuteStage.cpp" "StoreStage.cpp" 
@@ -21,7 +21,7 @@ add_library (CoreLib  "include/CoreLib.h"
          "include/CoreCluster.h" "include/CoreClusterGrid.h" 
          "include/SimComponentRegistry.h" "include/Logger.h" 
          "include/Stats.h" "include/MachineConfig.h" 
-         "include/units.h" "include/RAM_Config.h" 
+         "include/units.h" 
           "include/VectorValue.h" 
           "include/DivergenceQueue.h" 
           "L2InsnCache.cpp" "include/MemoryBus.h" "include/L2DataCache.h" "include/L2InsnCache.h" "include/L1InsnCache.h" "include/VectorMemoryController.h" "L1DataCache.cpp" "L2DataCache.cpp" "L3Cache.cpp" "VectorMemoryController.cpp")
