--- a/VerilogGenerator/test/Makefile
+++ b/VerilogGenerator/test/Makefile
@@ -3,7 +3,7 @@
 all: run
 
 compile:
-	verilator -Wall --cc --exe --build sim_main.cpp main.sv -top-module main -Wno-unused 
+	verilator --assert -Wall --cc --exe --build sim_main.cpp main.sv -top-module main -Wno-unused 
 	
 run: compile
 	obj_dir/Vmain
