verilator now runs a bunch more of the test.

--- a/CoreLib/CMakeLists.txt
+++ b/CoreLib/CMakeLists.txt
@@ -20,7 +20,7 @@ add_library (CoreLib  "include/CoreLib.h"
          "include/Multiplexer.h" "include/Core.h" 
          "include/CoreCluster.h" "include/CoreClusterGrid.h" 
          "include/SimComponentRegistry.h" "include/Logger.h" 
-         "include/Stats.h" "include/MachineConfig.h" 
+         "include/GlobalStats.h" "include/MachineConfig.h" 
          "include/units.h" 
           "include/VectorValue.h" 
           "include/DivergenceQueue.h" 
