--- a/CoreLib/CMakeLists.txt
+++ b/CoreLib/CMakeLists.txt
@@ -17,14 +17,18 @@ add_library (CoreLib  "include/CoreLib.h"
         "ExecuteStage.cpp" "StoreStage.cpp" 
         "include/RegisterFile.h" "include/DecodeToExecuteBus.h"
         "include/ExecuteToStoreBus.h" "include/StoreToFetchBus.h"
-         "include/Multiplexer.h" "include/Core.h" 
-         "include/CoreCluster.h" "include/CoreClusterGrid.h" 
-         "include/SimComponentRegistry.h" "include/Logger.h" 
-         "include/GlobalStats.h" "include/MachineConfig.h" 
-         "include/units.h" "CoreSelectionMemoryMultiplexer.cpp"
-          "include/VectorValue.h" 
-          "include/DivergenceQueue.h" 
-          "L2InsnCache.cpp" "include/MemoryBus.h" "include/L2DataCache.h" "include/L2InsnCache.h" "include/L1InsnCache.h" "include/VectorMemoryController.h" "L1DataCache.cpp" "L2DataCache.cpp" "L3Cache.cpp" "VectorMemoryController.cpp")
+        "include/Core.h" 
+        "include/CoreCluster.h" "include/CoreClusterGrid.h" 
+        "include/SimComponentRegistry.h" "include/Logger.h" 
+        "include/GlobalStats.h" "include/MachineConfig.h" 
+        "include/units.h" "CoreSelectionMemoryMultiplexer.cpp"
+        "include/VectorValue.h"         
+        "include/CoreInternalMemoryMultiplexer.h"
+        "CoreInternalMemoryMultiplexer.cpp"
+        "include/DivergenceQueue.h" 
+        "L2InsnCache.cpp" "include/MemoryBus.h" "include/L2DataCache.h" "include/L2InsnCache.h" 
+        "include/L1InsnCache.h" "include/VectorMemoryController.h" 
+        "L1DataCache.cpp" "L2DataCache.cpp" "L3Cache.cpp" "VectorMemoryController.cpp")
 
 target_compile_features(CoreLib PUBLIC cxx_std_20)
 
