--- a/Simulator/.vscode/launch.json
+++ b/Simulator/.vscode/launch.json
@@ -10,8 +10,7 @@
                 "request": "launch",
                 "program": "${workspaceFolder}/../build/Simulator/Simulator",
                 "args": [
-                    "${workspaceFolder}/../Assembler/tests/t1.bin",
-                    "1"
+                    "${workspaceFolder}/../Assembler/tests/t1.bin"
                 ],
                 "stopAtEntry": false,
                 "cwd": "${workspaceFolder}",
