--- a/CoreLib/CMakeLists.txt
+++ b/CoreLib/CMakeLists.txt
@@ -20,7 +20,7 @@ add_library (CoreLib  "include/CoreLib.h"
         "include/Core.h" 
         "include/CoreCluster.h" "include/CoreClusterGrid.h" 
         "include/SimComponentRegistry.h" "include/Logger.h" 
-        "include/GlobalStats.h" "include/MachineConfig.h" 
+        "include/GlobalStats.h" 
         "include/units.h" "CoreSelectionMemoryMultiplexer.cpp"
         "include/VectorValue.h"         
         "include/CoreInternalMemoryMultiplexer.h"
